# shara-backend

./: Cargo.toml  config.example.toml  config.toml
src/: main.rs
src/db/: mod.rs
src/db/models/: file.rs  mod.rs
src/routes/: mod.rs  root.rs
src/routes/files/: mod.rs  upload_url.rs
src/utils/: logger.rs
